made video fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ aside {
 }
 
 .videoContainer {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
